--- a/src/main/webapp/WEB-INF/views/backup/boardbackup.css
+++ b/src/main/webapp/WEB-INF/views/backup/boardbackup.css
@@ -15,7 +15,7 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #323232;
 }
-.board-input {
+input {
     width: 100%;
     height: 35px;
     margin: 5px 0px 10px 0px;
@@ -24,7 +24,7 @@
     background: #f8f8f8;
     outline-color: #e6e6e6;
 }
-.board-textarea {
+textarea {
     width: 100%;
     background: #f8f8f8;
     margin: 5px 0px 10px 0px;
